--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,24 @@
-== README
+# Case Management
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A Case Management MVC to keep track of staff, beneficiaries and case updates.
 
-Things you may want to cover:
+## Installation Instructions
 
-* Ruby version
+To install, clone this repository, run bundle install and run rails server.
 
-* System dependencies
+## Contributor's Guide
 
-* Configuration
+When contributing to this repository, please first discuss the change you wish to make via issue, email, or any other method with the owner of this repository before making a change.
 
-* Database creation
+Please adhere to the code of conduct detailed at http://contributor-covenant.org/version/1/4/.
 
-* Database initialization
+## The MIT License
 
-* How to run the test suite
+Copyright 2018 Kim Foukaris
 
-* Services (job queues, cache servers, search engines, etc.)
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
-* Deployment instructions
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-* ...
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
